# target-universal-file

./: .gitignore  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  test.yml
target_universal_file/: __init__.py  __main__.py  filesystem.py  sinks.py  target.py  writer.py
tests/: __init__.py  test_core.py
tests/data/: appliances.singer
