[tool.poetry]
name = "target-universal-file"
version = "0.0.1"
description = "Singer target for UniversalFile, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Sebastian Smiley <firstname.lastname@example.com>"]
keywords = [
    "ELT",
    "UniversalFile",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
singer-sdk = { version="~=0.41.0", extras = ["faker"] }
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.32.3"
fsspec = "~=2024.9.0"
pyarrow = "~=17.0.0"

[tool.poetry.dev-dependencies]
pytest = ">=8"
ruff = "~=0.6.0"
black = "~=24.8.0"
singer-sdk = { version="~=0.41.0", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.pytest.ini_options]
addopts = '--durations=10'

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
src = ["target_universal_file"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "D",
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["target_universal_file"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core==1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
target-universal-file = 'target_universal_file.target:TargetUniversalFile.cli'
